--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -108,9 +108,6 @@
 
                     <!--MEI output-->
 
-                    <form asp-action="MelodySearch" method="post">
-                        <input type="text" name="query" placeholder="Search MEI files">
-                        <button type="submit">Search</button>
                     <tr>
                         <td>
                             <div style="text-align: left;  display:inline;" id="render_01">
@@ -171,7 +168,7 @@
                             </div>
                         </td>
                     </tr>
-                    </form>
+                   
                     </tbody>
                 </table>
             </div>
@@ -226,8 +223,11 @@
         &lt;/mei&gt;
     </pre>
             </div>
+            <form asp-action="MelodySearch" method="post">
+                <input type="hidden" name="meiContent" id="meiContent">
 
-            <button id="saveMeiButton">Save as MEI</button>
+                <button type="submit">Search</button>  
+            </form>
             <br>
             <br>
             <br>
@@ -504,6 +504,18 @@
 
             // Add a click event listener to the "Save as MEI" button
             document.getElementById("saveMeiButton").addEventListener("click", saveMeiAsFile);
+
+            // Function to populate the hidden input field with MEI content
+            function populateMeiContent() {
+                var meiContent = $("#mei_output").text();
+                $("#meiContent").val(meiContent);
+            }
+
+            // Attach an event listener to the form submission
+            $("#melodySearchForm").submit(function (event) {
+                // Before submitting the form, populate the MEI content
+                populateMeiContent();
+            });
 
         </script>
 
