--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -223,15 +223,11 @@
         &lt;/mei&gt;
     </pre>
             </div>
-            <!--<form asp-action="MelodySearch" method="post">
+            <form asp-action="MelodySearch" method="post">
                 <input type="hidden" name="meiContent" id="meiContent">
-
                 <button type="submit">Search</button>  
-            </form>-->
-            <form id="dataForm" method="post">
-                <input type="hidden" id="meiContent" name="meiContent" />
-                <button type="button" onclick="sendData()">Send</button>
             </form>
+
             <br>
             <br>
             <br>
