Search instead of download

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -224,7 +224,7 @@
     </pre>
             </div>
   
-            <button onclick="saveMeiAsFile()">Download MEI File</button>
+            <button onclick="saveMeiAsFile()">Search MEI</button>
             <br>
             <br>
             <br>
