--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<melodySearchProject.Models.Mei>
-
+﻿@* @model IEnumerable<melodySearchProject.Models.Mei>
+ *@
 <h2>Search Results</h2>
 <br />
 <div>
