--- a/Views/Home/Data.cshtml
+++ b/Views/Home/Data.cshtml
@@ -8,7 +8,7 @@
 @foreach (var melody in Model)
 {
     <div>
-        <h2>@melody.FileName</h2>
-        <p>@melody.FileContent</p>
+        <h2>@melody.file_name</h2>
+        <p>@melody.file_content</p>
     </div>
 }
