--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>BYU Music Search Project</h2>
+        <h2>Comédie Vaudeville</h2>
     </div>
     <div class="container">
         <main role="main" class="pb-3">
