--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
     <div class="navbar">
         <h2>Comédie Vaudeville</h2>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="hidden-print footer navbar-fixed-bottom">
+    <footer>
         <p>
 
             Notation generated with Verovio version <a href="http://github.com/rism-digital/verovio/commit/a99660b" id="version">4.0.1-a99660b</a>
