--- a/Views/Home/SearchResults.cshtml
+++ b/Views/Home/SearchResults.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<MeiFile>
-
+<head>
+    <title>Search Results</title>
+</head>
 <h2>Search Results</h2>
 
 <!-- Add the back button -->
