--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - dayMelodySearch</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://www.verovio.org/javascript/latest/verovio-toolkit.js"></script>
@@ -22,7 +21,7 @@
     <footer>
         <p>
 
-            Notation generated with Verovio version <a href="http://github.com/rism-digital/verovio/commit/a99660b" id="version">4.0.1-a99660b</a>
+            Music encoded and rendered by <a href="https://github.com/rism-digital/verovio">Verovio</a>.
 
         </p>
     </footer>
