--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -579,7 +579,7 @@
                             intervals_text: intervalsText
                         },
                         highlight: {
-                            id: [hitId] // Example highlight based on ID
+                            id: [hitId] 
                         }
                     };
 
@@ -614,18 +614,6 @@
     </div>
     </div>
 
-
-
-    <!--Creates the link for the footer-->
-    <script>
-        $(document).ready(function () {
-            var version = vrvToolkit.getVersion();
-            var n = version.lastIndexOf('-');
-            var commit = version.substring(n + 1);
-            $('#version').text(version);
-            $("#version").attr("href", "http://github.com/rism-digital/verovio/commit/" + commit);
-        });
-    </script>
 
 </body>
 
